service section text color changes

--- a/css/nuvitek.css
+++ b/css/nuvitek.css
@@ -269,6 +269,7 @@ h3 {
 	
 	background-color: #fff;
 	text-align: center;
+	color: #000;
 }
 
 #cloud h2 {
@@ -288,6 +289,7 @@ h3 {
 	
 	background-color: #fff;
 	text-align: center;
+	color: #000;
 }
 
 #automation h2 {
@@ -307,6 +309,7 @@ h3 {
 	
 	background-color: #fff;
 	text-align: center;
+	color: #000;
 }
 
 #transformation h2 {
@@ -326,6 +329,7 @@ h3 {
 
 	background-color: #fff;
 	text-align: center;
+	color: #000;
 }
 
 #operations h2 {
@@ -363,6 +367,7 @@ color: #818285;
 #servicemanagement {
 	background-color: #fff;
 	text-align: center;
+	color: #000;
 }
 
 #servicemanagement h2 {
