--- a/v3/css/nuvitek.css
+++ b/v3/css/nuvitek.css
@@ -171,7 +171,7 @@ h3 {
 	letter-spacing: -0.01em;
 }
 
-#welcome, #about, #services, #customers, #workwithus, #cloud, #automation, #transformation, #operations, #data, #servicemanagement, #workwithus, #contact {
+#welcome, #about, #services, #customers, #workwithus, #cloud, #automation, #transformation, #operations, #data, #servicemanagement, #contact {
 	padding: 50px 0;
 	min-height: 400px;
 }
